# vortex-visualization

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  dependencies.repos  led_controller.py  requirements.txt  visulisation
.github/workflows/: industrial-ci.yaml  industrial-ci.yml
archive/: README.md
archive/auv_gui/: package.xml
archive/auv_gui/auv_gui/: auv_gui_node.py  main_window.py  widgets.py
archive/auv_gui/config/: gui_params.yaml
archive/foxglove-extensions/parameter-slider-extension/: README.md
archive/foxglove-extensions/parameter-slider-extension/src/: ParameterSliderPanel.tsx
archive/freya-visualization/: CMakeLists.txt
archive/thruster-visualization/: README.md  package.xml
archive/thruster-visualization/include/thruster_visualization/: thruster_broadcaster.hpp
archive/thruster-visualization/launch/: thruster_visualization_asv.launch.py
archive/thruster-visualization/src/: thruster_broadcaster.cpp
archive/urdf-models/: CMakeLists.txt  README.md  package.xml
archive/urdf-models/urdf/freya/: ASV_MainAssembly.urdf
archive/urdf-models/urdf/njord-buoys/: east_cardinal_mark.urdf  green_mark.urdf  north_cardinal_mark.urdf  red_mark.urdf  west_cardinal_mark.urdf
auv_gui/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
auv_gui/auv_gui/: auv_gui.py  auv_gui_node.py  auv_internal_gui.py  data_manager.py  main_window.py  widgets.py
auv_gui/config/: gui_params.yaml
auv_gui/launch/: gui.launch.py
foxglove-extension/helloworld/: README.md  package-lock.json  package.json
foxglove-extension/parameter-slider-extension/: package-lock.json  package.json  tsconfig.json
foxglove-extension/parameter-slider-extension/src/: ParameterSliderPanel.tsx
foxglove-extension/parameter-slider-extension/src/types/: index.d.ts
foxglove-extensions/parameter-slider-extension/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
foxglove-extensions/parameter-slider-extension/src/: ParameterSliderPanel.tsx  index.ts  nodeparams.json
foxglove-extensions/parameter-slider-extension/src/types/: index.d.ts
foxglove-setup/: Freya Diagnostics.json  ROS2 Test.json  foxglove_interface.json  freya-visualization.json
foxglove/state_visualization/: CMakeLists.txt  package.xml
foxglove/state_visualization/config/: state_visualization.yaml
foxglove/state_visualization/include/state_visualization/ros/: state_visualization_ros.hpp  state_visualization_utils.hpp
foxglove/state_visualization/launch/: state_visualization.launch.py
foxglove/state_visualization/src/: state_visualization_node.cpp  state_visualization_ros.cpp
freya-visualization/: package.xml
freya-visualization/launch/: freya_viz.launch.py
orca_gui/backend/: CMakeLists.txt  package.xml
orca_gui/backend/src/: backend_node.cpp
orca_gui/frontend/: package.json  tsconfig.json
orca_gui/frontend/src/: roslib.d.ts 
something/: CMakeLists.txt  package.xml
something/config/: bridge.yaml
something/launch/: bridge.launch.py
something/scripts/: bridge.py
something/scripts/static/css/: custom.css  map.css
something/scripts/static/fonts/icomoon/fonts/: icomoon.eot
something/scripts/static/maps/: land_lla.json  land_ned.json
something/scripts/templates/: base.html  bridge.html  docking.html  messages.html  thruster.html  topics.html
src/: App.css  App.tsx
src/components/: RosConnector.tsx
target-tracking/: CMakeLists.txt  package.xml  vis_subscriber.cpp
target-tracking-visualization/: CMakeLists.txt  package.xml
target-tracking-visualization/src/: target_tracking_visualization_ros.cpp
target-tracking-visuualization/src/: target_tracking_visualization_ros.cpp  target_tracking_visualization_ros_node.cpp
target-tracking/include/target_tracking_visualization/: target_tracking_visualization_ros.hpp
target-tracking/src/: target_tracking_visualization_ros.cpp
thruster-visualization/: CMakeLists.txt
thruster-visualization/include/thruster_visualization/: thruster_broadcaster.hpp
thruster-visualization/launch/: thruster_visualization_asv.launch.py  thruster_visualization_auv.launch.py
thruster-visualization/src/: thruster_broadcaster.cpp  thruster_visualization_node.cpp
thruster_visualization/: CMakeLists.txt  README.md  package.xml
thruster_visualization/include/thruster_visualization/: thruster_broadcaster.hpp
thruster_visualization/launch/: thruster_visualization.launch.py
thruster_visualization/src/: tf_broadcaster.cpp  thruster_broadcaster.cpp  thruster_visualization_node.cpp
thruster_visualization_auv/: CMakeLists.txt  package.xml
thruster_visualization_auv/include/thruster_visualization_auv/: thruster_auv_broadcaster.hpp
thruster_visualization_auv/launch/: thruster_visualization_auv.launch.py
thruster_visualization_auv/src/: thruster_auv_broadcaster.cpp  thruster_visualization_auv_node.cpp
urdf-models/: CMakeLists.txt  README.md  package.xml
urdf-models/launch/: display.launch.py  freya_urdf.launch.py  njord_buoy_test.launch.py  orca_urdf.launch.py
urdf-models/urdf/: ASV_MainAssembly.csv  ASV_MainAssembly.urdf
urdf-models/urdf/freya/: ASV_MainAssembly.urdf
urdf-models/urdf/njord-buoys/: south_cardinal_mark.urdf
urdf-models/urdf/orca/: AUV_MainAssembly.csv  AUV_MainAssembly.urdf
