<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auv_gui</name>
  <version>0.0.0</version>
  <description>AUV GUI for ROS2</description>
  <maintainer email="sondre95556888@gmail.com">sondre</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vortex_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
