<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bridge</name>
  <version>0.0.0</version>
  <description>milliAmpere1 bridge</description>
  <maintainer email="andeshog@stud.ntnu.no">andeshog</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>custom_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
