<?xml version="1.0"?>
<package format="2">
    <name>urdf-models</name>
    <version>0.0.0</version>
    <description>Package for visualizing URDF models in rviz and Foxglove Studio</description>
    <maintainer email="kolaseirik@gmail.com">Eirik Kolås</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>ros2launch</exec_depend>
    <exec_depend>urdf_launch</exec_depend>
    
    <export>
        <build_type>ament_cmake</build_type>
        <gazebo_ros gazebo_model_path="${prefix}/.."/>
    </export>
</package>
