<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>state_visualization</name>
  <version>0.0.0</version>
  <description>Package for visualizing states in foxglove 3d panel</description>

  <maintainer email="jorgen.fjermedal@hotmail.com">jorgen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>foxglove_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
