<?xml version="1.0"?>
<package format="3">
  <name>backend</name>
  <version>0.1.0</version>
  <description>A minimal ROS2 C++ backend package</description>
  <maintainer email="andreas.svendsrud@vortexntnu.no">Andreas Kluge Svendsrud</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
